--- a/app/views/layouts/application/_navbar.html.erb
+++ b/app/views/layouts/application/_navbar.html.erb
@@ -5,8 +5,6 @@
           &#x2630;
       </button>
 
-      <%= link_to 'Home', root_path, class: 'navbar-brand' %>
-
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
             
@@ -15,29 +13,19 @@
           <div class="navbar-nav ml-auto">
               <% if worker_signed_in? %>
 
-              <div class="nav-item">
-                <span class="navbar-text">
-                  Hello, &nbsp;
-                  <span>
-                  </div>
-
                   <div class="dropdown show">
                     <%= link_to current_worker.nickname, edit_worker_registration_path(current_worker), class: 'btn btn-secondary dropdown-toggle', 'role' => "button", 'id' => "dropdownMenuLink", 'data-toggle' => "dropdown", 'aria-haspopup' => "true", 'aria-expanded' => "false" %>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                      <%= link_to 'Edit profile', edit_worker_registration_path(current_worker), class: 'dropdown-item' %>
-                      <%= link_to 'Sign out', destroy_worker_session_path, method: :delete, class: 'dropdown-item' %>
+                      <%= link_to 'Log out', destroy_worker_session_path, method: :delete, class: 'dropdown-item' %>
                   </div>
                   <div>
 
-
-
                     <% else %>
-                    <div class="nav-item">
-                       <%= link_to 'Sign up', new_worker_registration_path, class: 'nav-link' %>
-                   </div>
+
                    <div class="nav-item">
                        <%= link_to 'Log in', new_worker_session_path, class: 'nav-link' %>
                    </div>
+
                    <% end %>
                </div>
            </div>
