--- a/app/views/workers/index.html.erb
+++ b/app/views/workers/index.html.erb
@@ -3,12 +3,14 @@
 	<tr>
 		<th>Email</th>
 		<th>Nickname</th>
+		<th colspan="3">Action</th>
 	</tr>
 	<% @workers.each do |worker| %>
-		<tr>
-			<td><%= worker.email %></td>
-			<td><%= worker.nickname %></td>
-		</tr>
+	<tr>
+		<td><%= worker.email %></td>
+		<td><%= worker.nickname %></td>
+		<td><%= link_to 'Show', worker_path(worker.id) %></td>
+	</tr>
 	<% end %>
 </table>
- <%= link_to 'Create new worker',  new_worker_path %>
+
