Создал сущность Role все CRUD операций

--- a/app/views/layouts/admin/_navbar.html.erb
+++ b/app/views/layouts/admin/_navbar.html.erb
@@ -5,6 +5,8 @@
           &#x2630;
       </button>
       <%= link_to 'Сотрудники', admin_root_path, :class => "text-light" %>
+      
+      <%= link_to 'Должности', admin_roles_path, :class => "text-light" %>
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
