--- a/app/views/admin/workers/_form.html.erb
+++ b/app/views/admin/workers/_form.html.erb
@@ -26,6 +26,10 @@
 </p>
 
 <p>
+	<%= f.select :role_id, Role.all.collect { |p| [ p.name, p.id ] }, include_blank: true %>
+</p>
+
+<p>
 	<%= f.submit %>
 </p>
 <% end %>
