--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,3 +1,5 @@
-<% @products.each do |product| %>
-	<%= link_to product.name, product_path(product) %>
+<% if @products %>
+	<% @products.each do |product| %>
+		<%= link_to product.name, product_path(product) %><br>
+	<% end %>
 <% end %>
