--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,3 +1,5 @@
-<%= @product.name %><br>
-<%= @product.description %><br>
-<%= @product.price %><br><hr>
+<% if @product %>
+    <%= @product.name %><br>
+    <%= @product.description %><br>
+    <%= @product.price %><br><hr>
+<% end %>
