Начал создавать функционал по созданию function

--- a/app/views/admin/functions/index.html.erb
+++ b/app/views/admin/functions/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Функции</h1>
-<%#= link_to 'Create new function',   new_admin__path %>
+
+<%= link_to 'Создать новую функцию', new_admin_function_path %>
+
 <table border="1">
   <tr>
     <th>Название</th>
