--- a/app/views/admin/functions/_form.html.erb
+++ b/app/views/admin/functions/_form.html.erb
@@ -16,6 +16,16 @@
   </p>
 
   <p>
+    <%= f.label :model_name %><br/>
+    <%= f.text_field :model_name %>
+  </p>
+
+  <p>
+    <%= f.label :description %><br/>
+    <%= f.text_area :description %>
+  </p>
+
+  <p>
     <%= f.label :role %><br/>
     <%= f.collection_select :role_id, Role.all, :id, :name %>
   </p>
