--- a/app/views/admin/functions/_form.html.erb
+++ b/app/views/admin/functions/_form.html.erb
@@ -16,8 +16,8 @@
   </p>
 
   <p>
-    <%= f.label :model_name %><br/>
-    <%= f.text_field :model_name %>
+    <%= f.label :model %><br/>
+    <%= f.text_field :model %>
   </p>
 
   <p>
