--- a/app/views/admin/functions/_index.html.erb
+++ b/app/views/admin/functions/_index.html.erb
@@ -4,8 +4,9 @@
 
 <table border="1">
   <tr>
-    <th>Название</th>
     <th>Модель</th>
+    <th>Название</th>
+    <th>Описание</th>
     <th>Доступ</th>
     <th>Роль</th>
     <th colspan="3">Actions</th>
@@ -13,8 +14,9 @@
 
   <% @functions.each do |function| %>
     <tr>
+      <td><%= function.model %></td>
       <td><%= function.name %></td>
-      <td><%= function.functionable_type %></td>
+      <td><%= function.description %></td>
       <td><%= function.access %></td>
       <td><%= function.role.name %></td>
       <td><%#= link_to 'Show', admin__path(function) %></td>
