--- a/app/views/admin/roles/show.html.erb
+++ b/app/views/admin/roles/show.html.erb
@@ -7,3 +7,6 @@
 
 <%= link_to 'Edit', edit_admin_role_path(@role) %> |
 <%= link_to 'Back', admin_roles_path %>
+
+<%= render partial: 'admin/functions/index' %>
+
