--- a/app/views/admin/functions/_form.html.erb
+++ b/app/views/admin/functions/_form.html.erb
@@ -11,26 +11,26 @@
   <% end %>
 
   <p>
-    <%= f.label :name %><br/>
+    <%= f.label :name, 'Название' %><br/>
     <%= f.text_field :name %>
   </p>
 
   <p>
-    <%= f.label :model %><br/>
+    <%= f.label :model, 'Модель' %><br/>
     <%= f.text_field :model %>
   </p>
 
   <p>
-    <%= f.label :description %><br/>
+    <%= f.label :description, 'Описание' %><br/>
     <%= f.text_area :description %>
   </p>
 
   <p>
-    <%= f.label :role %><br/>
+    <%= f.label :role, 'Роль' %><br/>
     <%= f.collection_select :role_id, Role.all, :id, :name %>
   </p>
 
   <p>
-    <%= f.submit %>
+    <%= f.submit 'Создать функцию' %>
   </p>
 <% end %>
