--- a/app/views/admin/functions/new.html.erb
+++ b/app/views/admin/functions/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', function: @function %>
 
-<%= link_to 'Back', admin_functions_path %>
+<%= link_to 'Список ролей', admin_roles_path %>
