--- a/app/views/admin/functions/_index.html.erb
+++ b/app/views/admin/functions/_index.html.erb
@@ -9,7 +9,7 @@
     <th>Описание</th>
     <th>Доступ</th>
     <th>Роль</th>
-    <th colspan="3">Actions</th>
+    <th colspan="3">Действия</th>
   </tr>
 
   <% @functions.each do |function| %>
@@ -20,7 +20,7 @@
       <td><%= function.access %></td>
       <td><%= function.role.name %></td>
       <td><%#= link_to 'Show', admin__path(function) %></td>
-      <td><%#= link_to 'Edit', edit__role_path(function) %></td>
+      <td><%= link_to 'Редактирование', edit_admin_function_path(function) %></td>
       <td><%#= link_to 'Destroy', admin__path(function), method: :delete, data: { confirm: 'Are you sure?' } %></td>
     </tr>
   <% end %>
