Исправил ошибки и перевел на русский

--- a/app/views/admin/workers/edit.html.erb
+++ b/app/views/admin/workers/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Worker</h1>
+<h1>Редактировать Сотрудника</h1>
 
 <%= render 'form', worker: @worker %>
 
 
-<%= link_to 'Back', admin_workers_path %>
+<%= link_to 'Назад', admin_workers_path %>
