--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -1,5 +1,4 @@
-
-<%= form_with model:  @product, local: true do |f| %>
+<%= form_with model: [:admin, @product], local: true do |f| %>
 <% if @product.errors.any? %>
 <div class="errors">
   Total errors: <%= @product.errors.count %>
@@ -11,15 +10,18 @@
 </div>
 <% end %>
 
-<p>Название
+<p>
+  <%= f.label :name %><br/>
   <%= f.text_field :name %>
 </p>
 
-<p>Цена
+<p>
+  <%= f.label :price %><br/>
   <%= f.number_field :price %>
 </p>
 
-<p>Описание
+<p>
+  <%= f.label :description %><br/>
   <%= f.text_area :description %>
 </p>
 
