--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,7 +1,24 @@
-<% if @products %>
+<h1>Товары</h1>
+<table border="1">
+	<tr>
+		<th>Название</th>
+		<th>Цена</th>
+		<th>Описание</th>
+		<th colspan="3">Действия</th>
+	</tr>
 	<% @products.each do |product| %>
-		<%= link_to product.name, admin_product_path(product)%>
-		<td><%= link_to 'Удалить', admin_product_path(product), method: :delete, data: { confirm: 'Are you sure?' } %></td><br>
+	<tr>
+		<td><%= product.name %></td>
+		<td><%= product.price %></td>
+		<td><%= product.description %></td>
+		<td><%= link_to 'Смотреть', admin_product_path(product) %></td>
+		<td><%= link_to 'Редактировать', edit_admin_product_path(product) %></td>
+		<td><%= link_to 'Удалить', admin_product_path(product), method: :delete, data: { confirm: 'Вы уверены?' } %></td>
+	</tr>
 	<% end %>
-<% end %>
+</table>
+
 <%= link_to 'Создать новый товар',   new_admin_product_path %>
+
+
+
