--- a/app/views/admin/roles/edit.html.erb
+++ b/app/views/admin/roles/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Role</h1>
+<h1>Редактировать должность</h1>
 
 <%= render 'form', role: @role %>
 
 
-<%= link_to 'Back', admin_roles_path %>
+<%= link_to 'Назад', admin_roles_path %>
