--- a/app/views/admin/roles/index.html.erb
+++ b/app/views/admin/roles/index.html.erb
@@ -1,16 +1,15 @@
 <h1>Должности</h1>
 <table border="1">
 	<tr>
-		<th>Name</th>
-		<th colspan="3">Action</th>
+		<th>Название</th>
+		<th colspan="2">Действия</th>
 	</tr>
 	<% @roles.each do |role| %>
 	<tr>
-		<td><%= role.name %></td>
-		<td><%= link_to 'Show', admin_role_path(role.id) %></td>
-		<td><%= link_to 'Edit', edit_admin_role_path(role) %></td>
-		<td><%= link_to 'Destroy', admin_role_path(role), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+		<td><%= link_to role.name, admin_role_path(role.id)  %></td>
+		<td><%= link_to 'Редактировать', edit_admin_role_path(role) %></td>
+		<td><%= link_to 'Удалить', admin_role_path(role), method: :delete, data: { confirm: 'Вы уверены?' } %></td>
 	</tr>
 	<% end %>
 </table>
-<%= link_to 'Create new role',   new_admin_role_path %>
+<%= link_to 'Создать новую должность',   new_admin_role_path %>
