--- a/app/views/admin/roles/new.html.erb
+++ b/app/views/admin/roles/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Role</h1>
+<h1>Новая должность</h1>
 
 <%= render 'form', role: @role %>
 
-<%= link_to 'Back', admin_roles_path %>
+<%= link_to 'Назад', admin_roles_path %>
