--- a/app/views/admin/roles/show.html.erb
+++ b/app/views/admin/roles/show.html.erb
@@ -1,12 +1,12 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
-  <%= @role.name %>
+  <strong>Назввание:</strong>
+  <h3><%= @role.name %></h3>
 </p>
 
-<%= link_to 'Edit', edit_admin_role_path(@role) %> |
-<%= link_to 'Back', admin_roles_path %>
+<%= link_to 'Редактировать', edit_admin_role_path(@role) %> |
+<%= link_to 'Назад', admin_roles_path %>
 
 <%= render partial: 'admin/functions/index' %>
 
