--- a/app/views/admin/workers/index.html.erb
+++ b/app/views/admin/workers/index.html.erb
@@ -2,9 +2,9 @@
 <table border="1">
 	<tr>
 		<th>Email</th>
-		<th>Nickname</th>
-		<th>Role</th>
-		<th colspan="3">Action</th>
+		<th>Имя</th>
+		<th>Должность</th>
+		<th colspan="3">Действия</th>
 	</tr>
 	<% @workers.each do |worker| %>
 	<tr>
@@ -15,12 +15,12 @@
 				<%= worker.role.name %>
 			<% end %>
 		</td>
-		<td><%= link_to 'Show', admin_worker_path(worker.id) %></td>
-		<td><%= link_to 'Edit', edit_admin_worker_path(worker) %></td>
-		<td><%= link_to 'Destroy', admin_worker_path(worker), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+		<td><%= link_to 'Смотреть', admin_worker_path(worker.id) %></td>
+		<td><%= link_to 'Редактировать', edit_admin_worker_path(worker) %></td>
+		<td><%= link_to 'Удалить', admin_worker_path(worker), method: :delete, data: { confirm: 'Вы уверены?' } %></td>
 	</tr>
 	<% end %>
 </table>
 
-<%= link_to 'Create new worker', new_admin_worker_path %>
+<%= link_to 'Создать нового сотрудника', new_admin_worker_path %>
 
