--- a/app/views/admin/workers/new.html.erb
+++ b/app/views/admin/workers/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Worker</h1>
+<h1>Новый сотрудник</h1>
 
 <%= render 'form', worker: @worker %>
 
-<%= link_to 'Back', admin_workers_path %>
+<%= link_to 'Назад', admin_workers_path %>
