--- a/app/views/admin/workers/show.html.erb
+++ b/app/views/admin/workers/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Nickname:</strong>
+  <strong>Имя:</strong>
   <%= @worker.nickname %>
 </p>
 <p>
@@ -9,5 +9,5 @@
   <%= @worker.email %>
 </p>
 
-<%= link_to 'Edit', edit_admin_worker_path(@worker) %> |
-<%= link_to 'Back', admin_workers_path %>
+<%= link_to 'Редактировать', edit_admin_worker_path(@worker) %> |
+<%= link_to 'Назад', admin_workers_path %>
