--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -10,22 +10,27 @@
 </div>
 <% end %>
 
-<p>
+<div>
   <%= f.label :name %><br/>
   <%= f.text_field :name %>
-</p>
+</div>
 
-<p>
+<div>
   <%= f.label :price %><br/>
   <%= f.number_field :price %>
-</p>
+</div>
 
-<p>
+<div>
+  <%= f.label :picture %><br />
+  <%= f.file_field :picture %>
+</div>
+
+<div>
   <%= f.label :description %><br/>
   <%= f.text_area :description %>
-</p>
+</div>
 
-<p>
+<div>
   <%= f.submit %>
-</p>
+</div>
 <% end %>
