--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -4,6 +4,7 @@
 		<th>Название</th>
 		<th>Цена</th>
 		<th>Описание</th>
+		<th>Изображение</th>
 		<th colspan="3">Действия</th>
 	</tr>
 	<% @products.each do |product| %>
@@ -11,6 +12,11 @@
 		<td><%= product.name %></td>
 		<td><%= product.price %></td>
 		<td><%= product.description %></td>
+		<td>
+			<% if product.picture.attached? %>
+		    <%= image_tag product.picture, size: 100 %>
+			<% end %>
+		</td>
 		<td><%= link_to 'Смотреть', admin_product_path(product) %></td>
 		<td><%= link_to 'Редактировать', edit_admin_product_path(product) %></td>
 		<td><%= link_to 'Удалить', admin_product_path(product), method: :delete, data: { confirm: 'Вы уверены?' } %></td>
