--- a/app/views/admin/workers/index.html.erb
+++ b/app/views/admin/workers/index.html.erb
@@ -22,5 +22,6 @@
 	<% end %>
 </table>
 
-<%= link_to 'Create new worker', new_admin_worker_path %>
-
+<% if current_worker.create_worker_access_is_given? %>
+	<%= link_to 'Create new worker', new_admin_worker_path %>
+<% end %>
