--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -17,7 +17,11 @@
 		    <%= image_tag product.picture, size: 100 %>
 			<% end %>
 		</td>
-		<td><%= link_to 'Смотреть', admin_product_path(product) %></td>
+		<td>
+			<% if current_worker.show_product_access_is_given? %>
+				<%= link_to 'Смотреть', admin_product_path(product) %>
+			<% end %>
+		</td>
 		<td><%= link_to 'Редактировать', edit_admin_product_path(product) %></td>
 		<td><%= link_to 'Удалить', admin_product_path(product), method: :delete, data: { confirm: 'Вы уверены?' } %></td>
 	</tr>
