--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -32,7 +32,8 @@
 	<% end %>
 </table>
 
-<%= link_to 'Создать новый товар',   new_admin_product_path %>
-
+<% if current_worker.new_product_access_is_given? %>
+	<%= link_to 'Создать новый товар',   new_admin_product_path %>
+<% end %>
 
 
