--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -28,7 +28,9 @@
 			<% end %>
 		</td>
 		<td>
-			<%= link_to 'Создать копию', admin_duplicate_path(product), method: :post %>
+			<% if current_worker.duplicate_product_access_is_given? %>
+				<%= link_to 'Создать копию', admin_duplicate_path(product), method: :post %>
+			<% end %>
 		</td>
 		<td><%= link_to 'Удалить', admin_product_path(product), method: :delete, data: { confirm: 'Вы уверены?' } %></td>
 	</tr>
