--- a/app/views/admin/roles/index.html.erb
+++ b/app/views/admin/roles/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Должности</h1>
-<table border="1">
+<table class="ui celled table">
 	<tr>
 		<th>Название</th>
 		<th colspan="2">Действия</th>
@@ -14,7 +14,6 @@
 </table>
 
 
-<%= link_to 'Создать новую должность',   new_admin_role_path %>
-
+	<%= link_to 'Создать новую должность',new_admin_role_path %>
 
 
