--- a/app/views/admin/workers/_form.html.erb
+++ b/app/views/admin/workers/_form.html.erb
@@ -11,18 +11,15 @@
 <% end %>
 
 <p>
-	<%= f.label :nickname %><br/>
-	<%= f.text_field :nickname %>
+	<%= f.text_field :nickname, placeholder: 'Имя' %>
 </p>
 
 <p>
-	<%= f.label :email %><br/>
-	<%= f.text_field :email %>
+	<%= f.text_field :email, placeholder: 'email' %>
 </p>
 
 <p>
-	<%= f.label :password %><br/>
-	<%= f.text_field :password %>
+	<%= f.text_field :password, placeholder: 'Пароль' %>
 </p>
 
 <p>
