--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,16 +1,16 @@
 <h1>Товары</h1>
-<table border="1">
+<table class="ui celled table">
 	<tr>
 		<th>Название</th>
-		<th>Цена</th>
 		<th>Описание</th>
+		<th>Цена</th>
 		<th>Изображение</th>
 	</tr>
 	<% @products.each do |product| %>
 	<tr>
 		<td><%= link_to product.name, product_path(product) %></td>
-		<td><%= product.price %></td>
 		<td><%= product.description %></td>
+		<td><%= product.price %></td>
 		<td>
 			<% if product.picture.attached? %>
 		    <%= image_tag product.picture, size: 100 %>
