--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -15,7 +15,7 @@
 		    	<%= image_tag product.picture, size: 100 %>
 			<% end %>
 		</td>
-		<% if current_worker.show_product_access_is_given? || current_worker.admin? %>
+		<% if current_worker.show_product_access_is_given? %>
 			<td><%= link_to product.name, admin_product_path(product) %></td>
 		<% else %>
 			<td><%= product.name %></td>
@@ -34,6 +34,6 @@
 	</tr>
 	<% end %>
 </table><hr>
-<% if current_worker.new_product_access_is_given? || current_worker.admin? %>
+<% if current_worker.new_product_access_is_given? %>
 	<%= link_to 'Создать новый товар',   new_admin_product_path %>
 <% end %>
