--- a/app/views/admin/products/show.html.erb
+++ b/app/views/admin/products/show.html.erb
@@ -3,7 +3,7 @@
     <%= image_tag @product.picture, size: 300 %><br><br>
 <% end %>
 <%= @product.description %><br><br><hr>
-<% if current_worker.edit_product_access_is_given? || current_worker.admin? %>
+<% if current_worker.edit_product_access_is_given? %>
     <%= link_to 'Редактировать', edit_admin_product_path(@product) %>
 <% end %>
 <%= link_to 'Назад', admin_products_path %>
