--- a/app/views/admin/workers/index.html.erb
+++ b/app/views/admin/workers/index.html.erb
@@ -20,6 +20,6 @@
 	</tr>
 <% end %>
 </table>
-<% if current_worker.create_worker_access_is_given? || current_worker.admin? %>
+<% if current_worker.create_worker_access_is_given? %>
 	<%= link_to 'Создать нового сотрудника', new_admin_worker_path %>
 <% end %>
