--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -1,2 +1,2 @@
-<h3 class="ui left floated header">Редактировать товар</h3>
+<h2 class="ui dividing header">Редактировать товар</h2><br>
 <%= render 'form' %>
