--- a/app/views/admin/products/show.html.erb
+++ b/app/views/admin/products/show.html.erb
@@ -1,9 +1,10 @@
+
 <h3 class="ui left floated header"><%= @product.name %> - <%= @product.price %><br></h3>
 <% if @product.picture.attached? %>
     <%= image_tag @product.picture, size: 300 %><br><br>
 <% end %>
 <%= @product.description %><br><br><hr>
 <% if current_worker.edit_product_access_is_given? || current_worker.admin? %>
-    <%= link_to 'Редактировать', edit_admin_product_path(@product) %>
+    <%= link_to "Редактировать", edit_admin_product_path(@product), class:"ui teal basic button" %>
 <% end %>
-<%= link_to 'Назад', admin_products_path %>
+    <%= link_to "Назад", admin_products_path, class:"ui blue basic button" %>
