--- a/app/views/admin/functions/_index.html.erb
+++ b/app/views/admin/functions/_index.html.erb
@@ -1,6 +1,6 @@
 <h1>Функции</h1>
-<table class="ui celled table">
-  <tr>
+<table class="ui selectable celled black table", id="centred_table">
+  <tr class="table_title">
     <th>Модель</th>
     <th>Название</th>
     <th>Описание</th>
