--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,11 +1,15 @@
 <h1>Товары</h1>
+<% if current_worker.new_product_access_is_given? || current_worker.admin? %>
+	<%= link_to 'Создать новый товар',   new_admin_product_path, class:"ui positive basic button" %>
+<% end %>
 <table class="ui selectable celled black table", id="centred_table">
 	<tr class="table_title">
 		<th>Изображение</th>
 		<th>Название</th>
 		<th>Цена</th>
-		<th colspan="3">Действия</th>
-
+		<% if current_worker.show_product_access_is_given? || current_worker.admin? %>
+			<th colspan="3">Действия</th>
+		<% end %>
 	</tr>
 	<% @products.each do |product| %>
 	<tr>
@@ -14,7 +18,7 @@
 		    	<%= image_tag product.picture, size: 100 %>
 			<% end %>
 		</td>
-		<% if current_worker.show_product_access_is_given? || current_worker.admin? %>
+		<% if current_worker.show_product_access_is_given? %>
 			<td><%= link_to product.name, admin_product_path(product) %></td>
 		<% else %>
 			<td><%= product.name %></td>
@@ -22,12 +26,12 @@
 		<td><%= product.price %></td>
 		<td>
 			<%= link_to admin_product_path(product), data: { confirm: 'Вы уверены?' },method: :delete do %>
-			<i class="trash alternate outline icon"></i>
+				<i class="huge trash alternate outline icon"></i></br></br>
 			<% end %>
+			<%= link_to "Создать копию", admin_duplicate_path(product), data: { confirm: 'Вы уверены?' },method: :post,class:"ui orange button" %>
 		</td>
 	</tr>
 	<% end %>
 </table>
-<% if current_worker.new_product_access_is_given? || current_worker.admin? %>
-	<%= link_to 'Создать новый товар',   new_admin_product_path, class:"ui positive basic button" %>
-<% end %>
+
+
