--- a/app/views/admin/roles/_form.html.erb
+++ b/app/views/admin/roles/_form.html.erb
@@ -1,21 +1,23 @@
-<%= form_with model: [:admin, @role], local: true do |f| %>
-<% if @role.errors.any? %>
-<div class="errors">
-	Total errors: <%= @role.errors.count %>
-	<ul>
-		<% @role.errors.full_messages.each do |message| %>
-		<li><%= message %></li>
+<div class="ui form">
+	<div class="fields">
+		<%= form_with model: [:admin, @role], local: true do |f| %>
+			<% if @role.errors.any? %>
+			<div class="errors">
+				Total errors: <%= @role.errors.count %>
+				<ul>
+					<% @role.errors.full_messages.each do |message| %>
+					<li><%= message %></li>
+					<% end %>
+				</ul>
+			</div>
+			<% end %>
+			<div class="field">
+				<%= f.text_field :name, placeholder: 'Название' %>
+			</div></br>
+
+			<p>
+				<%= f.submit "Подтвердить",class:"ui teal button" %>
+			</p>
 		<% end %>
-	</ul>
+	</div>
 </div>
-<% end %>
-
-<p>
-	<%= f.label :name %><br/>
-	<%= f.text_field :name %>
-</p>
-
-<p>
-	<%= f.submit %>
-</p>
-<% end %>
