--- a/app/views/admin/roles/new.html.erb
+++ b/app/views/admin/roles/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', role: @role %>
 
-<%= link_to 'Назад', admin_roles_path %>
+<%= link_to 'Назад', admin_roles_path, class:"ui blue basic button" %>
