--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Товары</h1>
-<% if current_worker.new_product_access_is_given? || current_worker.admin? %>
+<% if current_worker.new_product_access_is_given? %>
 	<%= link_to 'Создать новый товар',   new_admin_product_path, class:"ui positive basic button" %>
 <% end %>
 <table class="ui selectable celled black table", id="centred_table">
@@ -7,7 +7,7 @@
 		<th>Изображение</th>
 		<th>Название</th>
 		<th>Цена</th>
-		<% if current_worker.show_product_access_is_given? || current_worker.admin? %>
+		<% if current_worker.show_product_access_is_given? %>
 			<th colspan="3">Действия</th>
 		<% end %>
 	</tr>
@@ -32,7 +32,4 @@
 		</td>
 	</tr>
 	<% end %>
-</table><hr>
-<% if current_worker.new_product_access_is_given? %>
-	<%= link_to 'Создать новый товар',   new_admin_product_path %>
-<% end %>
+</table>
