--- a/app/views/layouts/admin/_navbar.html.erb
+++ b/app/views/layouts/admin/_navbar.html.erb
@@ -6,7 +6,7 @@
     </button>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <% if current_worker.index_product_access_is_given? || current_worker.admin? %>
+        <% if current_worker.index_product_access_is_given? %>
           <%= link_to 'Товары', admin_products_path, :class => "text-light" %>&nbsp;&nbsp;
         <% end %>
         <%= link_to 'Должности', admin_roles_path, :class => "text-light" %>&nbsp;&nbsp;
