Теперь только админ может редактировать права пользователей

--- a/app/views/admin/roles/show.html.erb
+++ b/app/views/admin/roles/show.html.erb
@@ -12,5 +12,7 @@
     Назад
   <% end %>
 </div>
-<%= render partial: 'admin/functions/index' %>
 
+<% if current_worker.admin? %>
+  <%= render partial: 'admin/functions/index' %>
+<% end %>
