--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Товары</h1>
 <% if current_worker.new_product_access_is_given? %>
-	<%= link_to 'Создать новый товар',   new_admin_product_path, class:"ui positive basic button" %>
+	<%= link_to 'Создать новый товар', new_admin_product_path, class:"ui positive basic button" %>
 <% end %>
 <table class="ui selectable celled black table", id="centred_table">
 	<tr class="table_title">
@@ -25,9 +25,12 @@
 		<% end %>
 		<td><%= product.price %></td>
 		<td>
-			<%= link_to admin_product_path(product), data: { confirm: 'Вы уверены?' },method: :delete do %>
-				<i class="huge trash alternate outline icon"></i></br></br>
+			<% if current_worker.destroy_product_access_is_given? %>
+				<%= link_to admin_product_path(product), data: { confirm: 'Вы уверены?' },method: :delete do %>
+					<i class="huge trash alternate outline icon"></i></br></br>
+				<% end %>
 			<% end %>
+
 			<%= link_to "Создать копию", admin_duplicate_path(product), data: { confirm: 'Вы уверены?' },method: :post,class:"ui orange button" %>
 		</td>
 	</tr>
