--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -34,6 +34,7 @@
 			<%= link_to "Создать копию", admin_duplicate_path(product), data: { confirm: 'Вы уверены?' },method: :post,class:"ui orange button" %>
 		</td>
 	</tr>
+			<% end %>
 	<% end %>
 </table>
 
