--- a/app/views/admin/roles/index.html.erb
+++ b/app/views/admin/roles/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Должности</h1>
-<% if current_worker.admin? %>
+<% if current_worker.new_role_access_is_given? %>
 	<%= link_to 'Создать новую должность',new_admin_role_path, class:"ui positive basic button" %>
 <% end %>
 <table class="ui selectable celled black table", id="centred_table">
@@ -11,13 +11,17 @@
 	<tr>
 		<td><%= link_to role.name, admin_role_path(role.id)  %></td>
 		<td>
-			<%= link_to edit_admin_role_path(role) do %>
-				Редактировать
+			<% if current_worker.edit_role_access_is_given? %>
+				<%= link_to edit_admin_role_path(role) do %>
+					Редактировать
+				<% end %>
 			<% end %>
 		</td>
 		<td>
-			<%= link_to admin_role_path(role), method: :delete, data: { confirm: 'Вы уверены?' } do %>
-				<i class="big trash alternate outline icon"></i>
+			<% if current_worker.destroy_role_access_is_given? %>
+				<%= link_to admin_role_path(role), method: :delete, data: { confirm: 'Вы уверены?' } do %>
+					<i class="big trash alternate outline icon"></i>
+				<% end %>
 			<% end %>
 		</td>
 	</tr>
