--- a/app/views/admin/workers/index.html.erb
+++ b/app/views/admin/workers/index.html.erb
@@ -15,13 +15,18 @@
 				<%= worker.role.name %>
 			<% end %>
 		</td>
-		<td><%= link_to  edit_admin_worker_path(worker) do %>
-			<i class="edit outline icon"></i>
-		<% end %>
+		<td>
+			<% if current_worker.edit_worker_access_is_given? %>
+				<%= link_to  edit_admin_worker_path(worker) do %>
+					<i class="edit outline icon"></i>
+				<% end %>
+			<% end %>
 		</td>
 		<td>
-			<%= link_to admin_worker_path(worker), data: { confirm: 'Вы уверены?' },method: :delete do %>
-				<i class="trash alternate outline icon"></i>
+			<% if current_worker.destroy_worker_access_is_given? %>
+				<%= link_to admin_worker_path(worker), data: { confirm: 'Вы уверены?' },method: :delete do %>
+					<i class="trash alternate outline icon"></i>
+				<% end %>
 			<% end %>
 		</td>
 	</tr>
