--- a/app/views/layouts/admin/_navbar.html.erb
+++ b/app/views/layouts/admin/_navbar.html.erb
@@ -10,10 +10,12 @@
           <%= link_to 'Товары', admin_products_path, :class => "text-light" %>&nbsp;&nbsp;
         <% end %>
 
-        <%= link_to 'Должности', admin_roles_path, :class => "text-light" %>&nbsp;&nbsp;
+        <% if current_worker.index_role_access_is_given? %>
+          <%= link_to 'Должности', admin_roles_path, :class => "text-light" %>&nbsp;&nbsp;
+        <% end %>
 
         <% if current_worker.index_worker_access_is_given? %>
-          <%= link_to 'Сотрудники', admin_root_path, :class => "text-light" %>&nbsp;&nbsp;
+          <%= link_to 'Сотрудники', admin_workers_path, :class => "text-light" %>&nbsp;&nbsp;
         <% end %>
       </ul>
       <div class="navbar-nav ml-auto">
