--- a/app/views/admin/roles/index.html.erb
+++ b/app/views/admin/roles/index.html.erb
@@ -9,10 +9,14 @@
 	</tr>
 	<% @roles.each do |role| %>
 	<tr>
-		<td><%= link_to role.name, admin_role_path(role.id)  %></td>
+		<td>
+			<h2>
+				<%= link_to role.name, admin_role_path(role.id)%>
+			</h2>
+		</td>
 		<td>
 			<%= link_to edit_admin_role_path(role) do %>
-				Редактировать
+				<i class="big edit outline icon"></i>
 			<% end %>
 		</td>
 		<td>
