--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -7,7 +7,7 @@
 
 <div class="ui form">
   <div class="fields">
-    <%= form_with model: [:admin, @order], local: true do |f| %>
+    <%= form_with url: send_to_order_path, method: :post, local: true do |f| %>
       <% if @order %>
         <% if @order.errors.any? %>
           <div class="errors">
@@ -22,7 +22,11 @@
       <% end %>
 
       <div class="field">
-        <%= f.text_field :phone, placeholder: 'Телефон' %><br>
+        <%= f.text_field :client_phone, placeholder: 'Телефон' %><br>
+      </div><br>
+
+      <div class="field">
+        <%= f.text_field :client_email, placeholder: 'Почта' %><br>
       </div><br>
 
       <div>
