--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,33 +5,7 @@
 <%= @product.description %><br><br><hr>
     <%= link_to "Назад", admin_products_path, class:"ui blue basic button" %>
 
-<div class="ui form">
-  <div class="fields">
-    <%= form_with url: send_to_order_path, method: :post, local: true do |f| %>
-      <% if @order %>
-        <% if @order.errors.any? %>
-          <div class="errors">
-            Total errors: <%= @order.errors.count %>
-            <ul>
-              <% @order.errors.full_messages.each do |message| %>
-                <li><%= message %></li>
-              <% end %>
-            </ul>
-          </div>
-        <% end %>
-      <% end %>
-
-      <div class="field">
-        <%= f.text_field :client_phone, placeholder: 'Телефон' %><br>
-      </div><br>
-
-      <div class="field">
-        <%= f.text_field :client_email, placeholder: 'Почта' %><br>
-      </div><br>
-
-      <div>
-        <%= f.submit "Отправить",class:"ui teal button" %>
-      </div>
-    <% end %>
-  </div>
+<br><br>
+<div>
+  <%= link_to "Оформить заказ", new_product_order_path(product_id: @product.id), class:"ui blue basic button" %>
 </div>
