--- a/app/views/admin/orders/edit.html.erb
+++ b/app/views/admin/orders/edit.html.erb
@@ -1,7 +1,18 @@
 <h1>Редактировать заказ</h1>
-
 <form class="ui form">
   <div class="field">
+    <%= form_with model: [:admin, @order], local: true do |f| %>
+      <% if @product.errors.any? %>
+        <div class="errors">
+          Total errors: <%= @order.errors.count %>
+          <ul>
+            <% @order.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
+        </div>
+    <% end %>
+
     <label>Имя</label>
     <input type="text" name="first-name" placeholder="Имя">
   </div>
