--- a/app/views/admin/orders/status.html.erb
+++ b/app/views/admin/orders/status.html.erb
@@ -1,2 +1,2 @@
 <h1>Статусы</h1>
-<%= link_to "Новые", admin_new_order_status_path %>
+<%= link_to "Новые", admin_order_by_status_path(status:'new_order') %>
