--- a/app/views/admin/orders/status.html.erb
+++ b/app/views/admin/orders/status.html.erb
@@ -1,2 +1,8 @@
 <h1>Статусы</h1>
-<%= link_to "Новые", admin_order_by_status_path(status:'new_order') %>
+
+<%= link_to "Все", admin_orders_path %>
+
+<%= link_to "Новые", admin_orders_path(status:'new_order') %>
+
+<%= link_to "Обработанные", admin_orders_path(status:'processed') %>
+
