#34 добавил во вьюхе ссылку на отказанные заказы

--- a/app/views/admin/orders/status.html.erb
+++ b/app/views/admin/orders/status.html.erb
@@ -6,3 +6,6 @@
 
 <%= link_to "Обработанные", admin_orders_path(status:'processed') %>
 
+<%= link_to "Отказались", admin_orders_path(status:'refused') %>
+
+
