--- a/app/views/admin/orders/edit.html.erb
+++ b/app/views/admin/orders/edit.html.erb
@@ -2,7 +2,7 @@
 <form class="ui form">
   <div class="field">
     <%= form_with model: [:admin, @order], local: true do |f| %>
-      <% if @product.errors.any? %>
+      <% if @order.errors.any? %>
         <div class="errors">
           Total errors: <%= @order.errors.count %>
           <ul>
