--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -20,7 +20,7 @@
 	<% @orders.each do |order| %>
 
 		<tr>
-				<th><b><%=  %></b></th>
+			<th><b><%=  %></b></th>
 			<th><b><%= order.client_name %></b></th>
 			<th><b><%= order.client_phone %></b></th>
 			<th><b><%= order.client_email %></b></th>
@@ -30,12 +30,13 @@
 			<th><b><%= order.quantity %></b></th>
 			<th><b><%= order.total_price %></b></th>
 			<th><b><%= order.status %></b></th>
-			<th><b><%= link_to "Edit", edit_admin_order_path(order) %>
-						 <%= link_to "Delete", admin_orders_path(order), method: :delete,
-						 data: {confirm: 'Do you want to remove this guest?'} %>
+			<th><b><%= link_to "Обработать", edit_admin_order_path(order) %>
+						 <%= link_to admin_orders_path(order), data: { confirm: 'Вы уверены?' },method: :delete do %>
+							<i class="big trash alternate outline icon"></i>
+						<% end %>
 						 </b></th>
 		</tr>
 	<% end %>
 </table>
 
-<%= link_to "Редактировать", admin_orders_path, class: "ui green button" %>
+<%#= link_to "Редактировать", admin_orders_path, class: "ui green button" %>
