--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -1,5 +1,48 @@
 <br>
 <br>
+<div class="ui grid">
+  <div class="four wide column">
+  <H3>Оператор</H3>  
+	  <%= link_to "Все", admin_orders_path %><br>
+	  <%= link_to "Новые", admin_orders_path(status:'new_order') %><br>
+	  <%= link_to "Обработанные", admin_orders_path(status:'processed') %><br>
+		<%= link_to "Отказались", admin_orders_path(status:'refused') %><br>
+  </div>
+
+  <div class="four wide column">
+  <h3>Склад</h3>
+	  <%= link_to "Подтверждённые", admin_orders_path %><br>
+	  <%= link_to "Комплектация", admin_orders_path %><br>
+	  <%= link_to "Подготовленные", admin_orders_path %><br>
+	  <%= link_to "Отправленные", admin_orders_path %><br>
+	  <%= link_to "Врученные", admin_orders_path %><br>
+	  <%= link_to "Вручены и оплачены", admin_orders_path %><br>
+	  <%= link_to "Возвраты", admin_orders_path %><br>
+	  <%= link_to "Получен возврат", admin_orders_path %><br>
+  </div>
+
+  <div class="four wide column">
+  <h3>Напоминание</h3>
+	  <%= link_to "Доставленные", admin_orders_path %><br>
+	  <%= link_to "Напоминание1", admin_orders_path %><br>
+	  <%= link_to "Напоминание2", admin_orders_path %><br>
+  </div>
+
+  <div class="four wide column">
+  <h3>Проблемные</h3>
+	  <%= link_to "Неподтверждённые", admin_orders_path %><br>
+	  <%= link_to "Отказы", admin_orders_path %><br>
+	  <%= link_to "Проблемы", admin_orders_path %><br>
+	  <%= link_to "Отсутствие продукта", admin_orders_path %><br>
+	  <%= link_to "В розыске", admin_orders_path %><br>
+  </div>
+
+  <div class="four wide column">
+  <h3>Прочие</h3>
+	  <%= link_to "Архив", admin_orders_path %><br>	  
+  </div>
+</div>
+
 <table class="ui selectable celled table">
   <thead>
     <tr>
