--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -18,7 +18,6 @@
   </thead>
 
 	<% @orders.each do |order| %>
-
 		<tr>
 			<th><b><%=  %></b></th>
 			<th><b><%= order.client_name %></b></th>
@@ -31,12 +30,10 @@
 			<th><b><%= order.total_price %></b></th>
 			<th><b><%= order.status %></b></th>
 			<th><b><%= link_to "Обработать", edit_admin_order_path(order) %>
-						 <%= link_to admin_orders_path(order), data: { confirm: 'Вы уверены?' },method: :delete do %>
+						 <%= link_to admin_order_path(order), data: { confirm: 'Вы уверены?' },method: :delete do %>
 							<i class="big trash alternate outline icon"></i>
 						<% end %>
 						 </b></th>
 		</tr>
 	<% end %>
 </table>
-
-<%#= link_to "Редактировать", admin_orders_path, class: "ui green button" %>
