--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -2,7 +2,8 @@
 <br>
 <div class="ui grid">
   <div class="four wide column">
-  <H3>Оператор</H3>  
+  <H3>Оператор</H3> 
+  <%= Order.all.count %> 
 	  <%= link_to "Все", admin_orders_path %><br>
 	  <%= link_to "Новые", admin_orders_path(status:'new_order') %><br>
 	  <%= link_to "Обработанные", admin_orders_path(status:'processed') %><br>
