--- a/app/views/admin/orders/edit.html.erb
+++ b/app/views/admin/orders/edit.html.erb
@@ -50,7 +50,7 @@
 
       <div>
         <%= f.label 'Статус' %>
-        <%= f.select( :status, options_for_select(Order.statuses[:status]) ) %>
+        <%= f.select( :status, options_for_select(Order.statuses.keys) ) %>
       </div>
 
       <div><br><br>
