--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -20,7 +20,6 @@
 		<% end %>
 	</tr>
 	<% @products.each do |product| %>
-
 	<tr>
 		<td>
 			<% if product.picture.attached? %>
@@ -48,25 +47,17 @@
 			</strong>
 		</td>
 		<td>
-			
-			<td>
-				<% if current_worker.destroy_product_access_is_given? %>
-					<%= link_to admin_product_path(product), data: { confirm: 'Вы уверены?' },method: :delete do %>
-						<i class="huge trash alternate outline icon"></i></br></br>
-					<% end %>
-				<% end %>
-
-			
-
-					
-				
 			<% if current_worker.duplicate_product_access_is_given? || current_worker.admin? %>
-
-				<%= link_to "Создать копию", admin_duplicate_path(product), data: { confirm: 'Вы уверены?' },method: :post,class:"ui orange button" %>
+				<%= link_to admin_duplicate_path(product), data: { confirm: 'Вы уверены?' },method: :post do %>
+					<i class="large circular teal inverted copy outline icon"></i>
+				<% end %>
+			<% end %>
+			<% if current_worker.destroy_product_access_is_given? %>
+				<%= link_to admin_product_path(product), data: { confirm: 'Вы уверены?' },method: :delete do %>
+					<i class="large circular inverted red trash alternate outline icon"></i>
+				<% end %>
 			<% end %>
 		</td>
 	</tr>
-			
-
 	<% end %>
 </table>
