--- a/app/views/admin/workers/index.html.erb
+++ b/app/views/admin/workers/index.html.erb
@@ -25,14 +25,14 @@
 		<td>
 			<% if current_worker.edit_worker_access_is_given? %>
 				<%= link_to  edit_admin_worker_path(worker) do %>
-					<i class="big edit outline icon"></i>
+					<i class="large circular teal inverted pencil alternate icon"></i>
 				<% end %>
 			<% end %>
 		</td>
 		<td>
 			<% if current_worker.destroy_worker_access_is_given? %>
 				<%= link_to admin_worker_path(worker), data: { confirm: 'Вы уверены?' },method: :delete do %>
-					<i class="big trash alternate outline icon"></i>
+					<i class="large circular inverted red trash alternate outline icon"></i>
 				<% end %>
 			<% end %>
 		</td>
